--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <ul>
                 <li>"Strefa Transformacji w Katowicach 2.0"</li>
                 <li>"Strefa Transformacji w Rudzie Śląskiej 2.0"</li>
-                <li>"ZWROTNICA – integracja na dobrym torze w Katowicach 2.0"</li>
+                <li>"ZWROTNICA – integracja na dobrym torze w Katowicach"</li>
                 <li>"ZWROTNICA – integracja na dobrym torze w Rudzie Śląskiej"</li>
                 <li>"freeDOM – mieszkanie treningowe"</li>
                 <li>"Praktykant - doświadczenie na wagę złota"</li>
@@ -237,7 +237,7 @@
 
         <!-- SEKCJA 3: ZWROTNICA w Katowicach 2.0 -->
         <section id="zwrotnica-katowice" aria-labelledby="zwrotnica-katowice-heading">
-            <h2 id="zwrotnica-katowice-heading">ZWROTNICA – integracja na dobrym torze w Katowicach 2.0</h2>
+            <h2 id="zwrotnica-katowice-heading">ZWROTNICA – integracja na dobrym torze w Katowicach</h2>
             <p>Projekt skierowany do co najmniej 220 osób zagrożonych ubóstwem lub wykluczeniem społecznym z Katowic.</p>
             <p><strong>Biuro projektu:</strong> Katowice, ul. Ligockiej 5.</p>
             <h4>Metadane Projektu</h4>
@@ -260,7 +260,7 @@
                 <p>W sprawach dotyczących projektu prosimy o kontakt:</p>
                 <ul>
                     <li>Telefonicznie: <a href="tel:+48323456789" aria-label="Zadzwoń pod numer 32 345 67 89"><strong>32 345 67 89</strong></a></li>
-                    <li>Mailowo: <a href="mailto:zwrotnica.katowice@scpip.pl?subject=ZWROTNICA – integracja na dobrym torze w Katowicach 2.0" aria-label="Wyślij email do zwrotnica.katowice@scpip.pl"><strong>zwrotnica.katowice@scpip.pl</strong></a></li>
+                    <li>Mailowo: <a href="mailto:zwrotnica.katowice@scpip.pl?subject=ZWROTNICA – integracja na dobrym torze w Katowicach" aria-label="Wyślij email do zwrotnica.katowice@scpip.pl"><strong>zwrotnica.katowice@scpip.pl</strong></a></li>
                 </ul>
             </div>
 
@@ -297,7 +297,7 @@
                 <h4>Kontakt w sprawie projektu</h4>
                 <p>W sprawach dotyczących projektu prosimy o kontakt:</p>
                 <ul>
-                    <li>Telefonicznie: <a href="tel:+48324567890" aria-label="Zadzwoń pod numer 32 456 78 90"><strong>32 456 78 90</strong></a></li>
+                    <li>Telefonicznie: <a href="tel:+48574175150" aria-label="Zadzwoń pod numer +48 574 175 150"><strong>+48 574 175 150</strong></a></li>
                     <li>Mailowo: <a href="mailto:zwrotnica.ruda@scpip.pl?subject=ZWROTNICA – integracja na dobrym torze w Rudzie Śląskiej" aria-label="Wyślij email do zwrotnica.ruda@scpip.pl"><strong>zwrotnica.ruda@scpip.pl</strong></a></li>
                 </ul>
             </div>
