--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <li role="none"><a href="#o-projektach" role="menuitem" tabindex="0">O projektach</a></li>
                 <li role="none"><a href="#strefa-katowice" role="menuitem" tabindex="-1">Strefa Transformacji w Katowicach 2.0</a></li>
                 <li role="none"><a href="#strefa-ruda" role="menuitem" tabindex="-1">Strefa Transformacji w Rudzie Śląskiej 2.0</a></li>
-                <li role="none"><a href="#zwrotnica-katowice" role="menuitem" tabindex="-1">ZWROTNICA w Katowicach 2.0</a></li>
+                <li role="none"><a href="#zwrotnica-katowice" role="menuitem" tabindex="-1">ZWROTNICA w Katowicach</a></li>
                 <li role="none"><a href="#zwrotnica-ruda" role="menuitem" tabindex="-1">ZWROTNICA w Rudzie Śląskiej</a></li>
                 <li role="none"><a href="#freedom" role="menuitem" tabindex="-1">freeDOM – mieszkanie treningowe</a></li>
                 <li role="none"><a href="#praktykant" role="menuitem" tabindex="-1">Praktykant - doświadczenie na wagę złota</a></li>
@@ -298,7 +298,7 @@
                 <p>W sprawach dotyczących projektu prosimy o kontakt:</p>
                 <ul>
                     <li>Telefonicznie: <a href="tel:+48574175150" aria-label="Zadzwoń pod numer +48 574 175 150"><strong>+48 574 175 150</strong></a></li>
-                    <li>Mailowo: <a href="mailto:zwrotnica.ruda@scpip.pl?subject=ZWROTNICA – integracja na dobrym torze w Rudzie Śląskiej" aria-label="Wyślij email do zwrotnica.ruda@scpip.pl"><strong>zwrotnica.ruda@scpip.pl</strong></a></li>
+                    <li>Mailowo: <a href="mailto:zwrotnica.katowice@gmail.com?subject=ZWROTNICA – integracja na dobrym torze w Rudzie Śląskiej" aria-label="Wyślij email do zwrotnica.katowice@gmail.com"><strong>zwrotnica.katowice@gmail.com</strong></a></li>
                 </ul>
             </div>
             
