Strefa Transformacji w Katowicach 2.0 - poprawny mail + telefon

--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
                 <h4>Kontakt w sprawie projektu</h4>
                 <p>W sprawach dotyczących projektu prosimy o kontakt:</p>
                 <ul>
-                    <li>Telefonicznie: <a href="tel:+48321234567" aria-label="Zadzwoń pod numer 32 123 45 67"><strong>32 123 45 67</strong></a></li>
-                    <li>Mailowo: <a href="mailto:strefa.katowice@scpip.pl?subject=Strefa Transformacji w Katowicach 2.0" aria-label="Wyślij email do strefa.katowice@scpip.pl"><strong>strefa.katowice@scpip.pl</strong></a></li>
+                    <li>Telefonicznie: <a href="tel:+48792377809" aria-label="Zadzwoń pod numer +48 792 377 809"><strong>+48 792 377 809</strong></a></li>
+                    <li>Mailowo: <a href="mailto:strefa.transformacji@gmail.com?subject=Strefa Transformacji w Katowicach 2.0" aria-label="Wyślij email do strefa.transformacji@gmail.com"><strong>strefa.transformacji@gmail.com</strong></a></li>
                 </ul>
             </div>
 
