freeDOM - poprawoiony numer - usunięty email

--- a/index.html
+++ b/index.html
@@ -335,10 +335,10 @@
             
             <div class="contact-info">
                 <h4>Kontakt w sprawie projektu</h4>
-                <p>W sprawach dotyczących projektu prosimy o kontakt:</p>
+                <p>W sprawach dotyczących projektu prosimy o kontakt (Opiekun Mieszkania Terenowego):</p>
                 <ul>
-                    <li>Telefonicznie: <a href="tel:+48325678901" aria-label="Zadzwoń pod numer 32 567 89 01"><strong>32 567 89 01</strong></a></li>
-                    <li>Mailowo: <a href="mailto:freedom@scpip.pl?subject=freeDOM – mieszkanie treningowe" aria-label="Wyślij email do freedom@scpip.pl"><strong>freedom@scpip.pl</strong></a></li>
+                    <li>Telefonicznie - Opiekun Mieszkania Terenowego: <a href="tel:+48794074375" aria-label="Zadzwoń pod numer +48 794 074 375"><strong>+48 794 074 375</strong></a></li>
+                    <!-- <li>Mailowo: <a href="mailto:freedom@scpip.pl?subject=freeDOM – mieszkanie treningowe" aria-label="Wyślij email do freedom@scpip.pl"><strong>freedom@scpip.pl</strong></a></li> -->
                 </ul>
             </div>
             
