Zwrotnica Katowice - poprawione dane kontaktowe

--- a/index.html
+++ b/index.html
@@ -259,8 +259,8 @@
                 <h4>Kontakt w sprawie projektu</h4>
                 <p>W sprawach dotyczących projektu prosimy o kontakt:</p>
                 <ul>
-                    <li>Telefonicznie: <a href="tel:+48323456789" aria-label="Zadzwoń pod numer 32 345 67 89"><strong>32 345 67 89</strong></a></li>
-                    <li>Mailowo: <a href="mailto:zwrotnica.katowice@scpip.pl?subject=ZWROTNICA – integracja na dobrym torze w Katowicach" aria-label="Wyślij email do zwrotnica.katowice@scpip.pl"><strong>zwrotnica.katowice@scpip.pl</strong></a></li>
+                    <li>Telefonicznie: <a href="tel:+48537181444" aria-label="Zadzwoń pod numer +48 537 181 444"><strong>+48 537 181 444</strong></a></li>
+                    <li>Mailowo: <a href="mailto:zwrotnica.katowice@gmail.com?subject=ZWROTNICA – integracja na dobrym torze w Katowicach" aria-label="Wyślij email do zwrotnica.katowice@gmail.com"><strong>zwrotnica.katowice@gmail.com</strong></a></li>
                 </ul>
             </div>
 
