freeDOM - aktualizacja maila

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                 <p>W sprawach dotyczących projektu prosimy o kontakt (Opiekun Mieszkania Terenowego):</p>
                 <ul>
                     <li>Telefonicznie - Opiekun Mieszkania Terenowego: <a href="tel:+48794074375" aria-label="Zadzwoń pod numer +48 794 074 375"><strong>+48 794 074 375</strong></a></li>
-                    <!-- <li>Mailowo: <a href="mailto:freedom@scpip.pl?subject=freeDOM – mieszkanie treningowe" aria-label="Wyślij email do freedom@scpip.pl"><strong>freedom@scpip.pl</strong></a></li> -->
+                    <li>Mailowo: <a href="mailto:olascpip@gmail.com?subject=freeDOM – mieszkanie treningowe" aria-label="Wyślij email do olascpip@gmail.com"><strong>olascpip@gmail.com</strong></a></li>
                 </ul>
             </div>
             
