Zwrotnica w Rudzie - poprawka maila
Poprzedni commit błędna nazwa commitu - chodziło o Rudę nie Katowice

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                 <p>W sprawach dotyczących projektu prosimy o kontakt:</p>
                 <ul>
                     <li>Telefonicznie: <a href="tel:+48574175150" aria-label="Zadzwoń pod numer +48 574 175 150"><strong>+48 574 175 150</strong></a></li>
-                    <li>Mailowo: <a href="mailto:magdalena.scpip@gmail.com?subject=ZWROTNICA – integracja na dobrym torze w Rudzie Śląskiej" aria-label="Wyślij email do magdalena.scpip@gmail.com"><strong>magdalena.scpip@gmail.comm</strong></a></li>
+                    <li>Mailowo: <a href="mailto:magdalena.scpip@gmail.com?subject=ZWROTNICA – integracja na dobrym torze w Rudzie Śląskiej" aria-label="Wyślij email do magdalena.scpip@gmail.com"><strong>magdalena.scpip@gmail.com</strong></a></li>
                 </ul>
             </div>
             
