Strefa Transformacji w Rudzie Śląskiej - poprawione dane kontaktowe

--- a/index.html
+++ b/index.html
@@ -222,8 +222,8 @@
                 <h4>Kontakt w sprawie projektu</h4>
                 <p>W sprawach dotyczących projektu prosimy o kontakt:</p>
                 <ul>
-                    <li>Telefonicznie: <a href="tel:+48322345678" aria-label="Zadzwoń pod numer 32 234 56 78"><strong>32 234 56 78</strong></a></li>
-                    <li>Mailowo: <a href="mailto:strefa.ruda@scpip.pl?subject=Strefa Transformacji w Rudzie Śląskiej 2.0" aria-label="Wyślij email do strefa.ruda@scpip.pl"><strong>strefa.ruda@scpip.pl</strong></a></li>
+                    <li>Telefonicznie: <a href="tel:+48791671258" aria-label="Zadzwoń pod numer +48 791 671 258"><strong>+48 791 671 258</strong></a></li>
+                    <li>Mailowo: <a href="mailto:gosia.scpip@gmail.com?subject=Strefa Transformacji w Rudzie Śląskiej 2.0" aria-label="Wyślij email do gosia.scpip@gmail.com"><strong>gosia.scpip@gmail.com</strong></a></li>
                 </ul>
             </div>
             
