SEKCJA 3: ZWROTNICA w Katowicach - Fix - usunięcie 2.0

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             <div class="document-link-wrapper"><a href="dokumenty/strefa-ruda/Zgoda_RODO_Zwrotnica.docx" target="_blank" aria-label="Zgoda RODO Zwrotnica - zostanie pobrana">Zgoda RODO Zwrotnica</a> <span class="file-info">(WORD: 56 KB)</span></div>
         </section>
 
-        <!-- SEKCJA 3: ZWROTNICA w Katowicach 2.0 -->
+        <!-- SEKCJA 3: ZWROTNICA w Katowicach -->
         <section id="zwrotnica-katowice" aria-labelledby="zwrotnica-katowice-heading">
             <h2 id="zwrotnica-katowice-heading">ZWROTNICA – integracja na dobrym torze w Katowicach</h2>
             <p>Projekt skierowany do co najmniej 220 osób zagrożonych ubóstwem lub wykluczeniem społecznym z Katowic.</p>
