Zwrotnica - poprawa sekcji

--- a/index.html
+++ b/index.html
@@ -273,7 +273,9 @@
             <div class="document-link-wrapper"><a href="dokumenty/zwrotnica-katowice/Klauzula_RODO_Zwrotnica_Kato.pdf" target="_blank" aria-label="Klauzula informacyjna RODO - otworzy się w nowej karcie">Klauzula informacyjna RODO</a> <span class="file-info">(PDF: 70 KB)</span></div>
             <div class="document-link-wrapper"><a href="dokumenty/zwrotnica-katowice/Ankieta_badania_specjalnych_potrzeb_Zwrotnica_Kato.pdf" target="_blank" aria-label="Ankieta badania specjalnych potrzeb - otworzy się w nowej karcie">Ankieta badania specjalnych potrzeb</a> <span class="file-info">(PDF: 55 KB)</span></div>
             <div class="document-link-wrapper"><a href="dokumenty/zwrotnica-katowice/Dostepnosc_architektoniczna_Zwrotnica_Kato.pdf" target="_blank" aria-label="Dostępność architektoniczna biura projektu - otworzy się w nowej karcie">Dostępność architektoniczna biura projektu</a> <span class="file-info">(PDF: 16 KB)</span></div>
-        <!-- SEKCJA 4: ZWROTNICA w Rudzie Śląskiej -->
+        </section>
+       
+            <!-- SEKCJA 4: ZWROTNICA w Rudzie Śląskiej -->
         <section id="zwrotnica-ruda" aria-labelledby="zwrotnica-ruda-heading">
             <h2 id="zwrotnica-ruda-heading">ZWROTNICA – integracja na dobrym torze w Rudzie Śląskiej</h2>
             <p>Projekt skierowany do co najmniej 240 osób zagrożonych ubóstwem lub wykluczeniem społecznym z Rudy Śląskiej.</p>
