--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <li>"Strefa Transformacji w Katowicach 2.0"</li>
                 <li>"Strefa Transformacji w Rudzie Śląskiej 2.0"</li>
                 <li>"ZWROTNICA – integracja na dobrym torze w Katowicach 2.0"</li>
-                <li>"ZWROTNICA – integracja na dobrym torze w Rudzie Śląskiej"</li>
+                <li>"ZWROTNICA – integracja na dobrym torze w Rudzie Śląskiej 2.0"</li>
                 <li>"freeDOM – mieszkanie treningowe"</li>
                 <li>"Praktykant - doświadczenie na wagę złota"</li>
             </ul>
@@ -237,7 +237,7 @@
 
         <!-- SEKCJA 3: ZWROTNICA w Katowicach -->
         <section id="zwrotnica-katowice" aria-labelledby="zwrotnica-katowice-heading">
-            <h2 id="zwrotnica-katowice-heading">ZWROTNICA – integracja na dobrym torze w Katowicach 2.0</h2>
+            <h2 id="zwrotnica-katowice-heading">ZWROTNICA – integracja na dobrym torze w Katowicach</h2>
             <p>Projekt skierowany do co najmniej 220 osób zagrożonych ubóstwem lub wykluczeniem społecznym z Katowic.</p>
             <p><strong>Biuro projektu:</strong> Katowice, ul. Ligockiej 5.</p>
             <h4>Metadane Projektu</h4>
@@ -260,7 +260,7 @@
                 <p>W sprawach dotyczących projektu prosimy o kontakt:</p>
                 <ul>
                     <li>Telefonicznie: <a href="tel:+48537181444" aria-label="Zadzwoń pod numer +48 537 181 444"><strong>+48 537 181 444</strong></a></li>
-                    <li>Mailowo: <a href="mailto:zwrotnica.katowice@gmail.com?subject=ZWROTNICA – integracja na dobrym torze w Katowicach 2.0" aria-label="Wyślij email do zwrotnica.katowice@gmail.com"><strong>zwrotnica.katowice@gmail.com</strong></a></li>
+                    <li>Mailowo: <a href="mailto:zwrotnica.katowice@gmail.com?subject=ZWROTNICA – integracja na dobrym torze w Katowicach" aria-label="Wyślij email do zwrotnica.katowice@gmail.com"><strong>zwrotnica.katowice@gmail.com</strong></a></li>
                 </ul>
             </div>
 
