Poprawki w menu i treści strony

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <li role="none"><a href="#o-projektach" role="menuitem" tabindex="0">O projektach</a></li>
                 <li role="none"><a href="#strefa-katowice" role="menuitem" tabindex="-1">Strefa Transformacji w Katowicach 2.0</a></li>
                 <li role="none"><a href="#strefa-ruda" role="menuitem" tabindex="-1">Strefa Transformacji w Rudzie Śląskiej 2.0</a></li>
-                <li role="none"><a href="#zwrotnica-katowice" role="menuitem" tabindex="-1">ZWROTNICA w Katowicach</a></li>
+                <li role="none"><a href="#zwrotnica-katowice" role="menuitem" tabindex="-1">ZWROTNICA w Katowicach 2.0</a></li>
                 <li role="none"><a href="#zwrotnica-ruda" role="menuitem" tabindex="-1">ZWROTNICA w Rudzie Śląskiej</a></li>
                 <li role="none"><a href="#freedom" role="menuitem" tabindex="-1">freeDOM – mieszkanie treningowe</a></li>
                 <li role="none"><a href="#praktykant" role="menuitem" tabindex="-1">Praktykant - doświadczenie na wagę złota</a></li>
@@ -235,7 +235,7 @@
             <div class="document-link-wrapper"><a href="dokumenty/strefa-ruda/Zgoda_RODO_Zwrotnica.docx" target="_blank" aria-label="Zgoda RODO Zwrotnica - zostanie pobrana">Zgoda RODO Zwrotnica</a> <span class="file-info">(WORD: 56 KB)</span></div>
         </section>
 
-        <!-- SEKCJA 3: ZWROTNICA w Katowicach -->
+        <!-- SEKCJA 3: ZWROTNICA w Katowicach 2.0 -->
         <section id="zwrotnica-katowice" aria-labelledby="zwrotnica-katowice-heading">
             <h2 id="zwrotnica-katowice-heading">ZWROTNICA – integracja na dobrym torze w Katowicach 2.0</h2>
             <p>Projekt skierowany do co najmniej 220 osób zagrożonych ubóstwem lub wykluczeniem społecznym z Katowic.</p>
