Aktualizacja dostępność arch. dla Ligocka 5

--- a/index.html
+++ b/index.html
@@ -162,7 +162,15 @@
             <div class="accessibility-info">
                 <h4>Dostępność architektoniczna</h4>
                 <p><strong>Biuro projektu (Katowice, ul. Ligocka 5):</strong></p>
-                <p>Budynek jest dostępny dla osób z niepełnosprawnością ruchową. Jedno z wejść do budynku posiada podjazd dla osób poruszających się na wózkach inwalidzkich Toalety są dostosowane do potrzeb osób z niepełnosprawnościami. Przed budynkiem znajdują się oznaczone miejsca parkingowe dla osób z niepełnosprawnościami.</p>
+                <p>Biuro projektu „Zwrotnica – integracja na dobrym torze w Katowicach” usytuowane jest na parterze budynku nr 5 przy ul. Ligockiej w Katowicach.</p>
+                <p>Biuro projektu posiada dwa wejścia:<br>
+                1. Osobne wejście do Stowarzyszenia Śląskie Centrum Profilaktyki / biura projektu znajduje się z tyłu budynku i prowadzą do niego schody.<br>
+                2. Wejście główne do bloku od strony ulicy Ligockiej, z parkingu przy bloku nr 5.<br>
+                Przy wejściu głównym do bloku znajduje się zarówno podjazd dla wózków, jak i schody.<br>
+                Toaleta dla osób z niepełnosprawnościami znajduje się na parterze, w pomieszczeniach biura projektu.<br>
+                Na parkingu przy głównym wejściu do budynku znajdują się dwa miejsca parkingowe dla osób z niepełnosprawnościami.<br>
+                Z psem asystującym można wejść do budynku i wszystkich pomieszczeń udostępnionych dla uczestników projektu.<br>
+                W biurze projektu, w którym odbywa się zarówno rekrutacja uczestników, jak i spotkania ze specjalistami takimi jak psycholog, doradca zawodowy, specjalista ds. reintegracji, pracownik socjalny, specjalistka ds. szkoleń znajdują się korytarze o wystarczającej szerokości i nie ma progów, co umożliwia swobodne poruszanie się osobom na wózkach.</p>
             </div>
             
             <div class="contact-info">
@@ -391,7 +399,15 @@
             <div class="accessibility-info">
                 <h4>Dostępność architektoniczna</h4>
                 <p><strong>Biuro projektu (Katowice, ul. Ligocka 5):</strong></p>
-                <p>Budynek jest dostępny dla osób z niepełnosprawnością ruchową. Jedno z wejść do budynku posiada podjazd dla osób poruszających się na wózkach inwalidzkich Toalety są dostosowane do potrzeb osób z niepełnosprawnościami. Przed budynkiem znajdują się oznaczone miejsca parkingowe dla osób z niepełnosprawnościami.</p>
+                <p>Biuro projektu „Zwrotnica – integracja na dobrym torze w Katowicach” usytuowane jest na parterze budynku nr 5 przy ul. Ligockiej w Katowicach.</p>
+                <p>Biuro projektu posiada dwa wejścia:<br>
+                1. Osobne wejście do Stowarzyszenia Śląskie Centrum Profilaktyki / biura projektu znajduje się z tyłu budynku i prowadzą do niego schody.<br>
+                2. Wejście główne do bloku od strony ulicy Ligockiej, z parkingu przy bloku nr 5.<br>
+                Przy wejściu głównym do bloku znajduje się zarówno podjazd dla wózków, jak i schody.<br>
+                Toaleta dla osób z niepełnosprawnościami znajduje się na parterze, w pomieszczeniach biura projektu.<br>
+                Na parkingu przy głównym wejściu do budynku znajdują się dwa miejsca parkingowe dla osób z niepełnosprawnościami.<br>
+                Z psem asystującym można wejść do budynku i wszystkich pomieszczeń udostępnionych dla uczestników projektu.<br>
+                W biurze projektu, w którym odbywa się zarówno rekrutacja uczestników, jak i spotkania ze specjalistami takimi jak psycholog, doradca zawodowy, specjalista ds. reintegracji, pracownik socjalny, specjalistka ds. szkoleń znajdują się korytarze o wystarczającej szerokości i nie ma progów, co umożliwia swobodne poruszanie się osobom na wózkach.</p>
             </div>
             
             <div class="contact-info">
