--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
             <div class="document-link-wrapper"><a href="dokumenty/zwrotnica-katowice/Deklaracja_uczestnictwa_Zwrotnica_Kato.pdf" target="_blank" aria-label="Deklaracja uczestnictwa - otworzy się w nowej karcie">Deklaracja uczestnictwa</a> <span class="file-info">(PDF: 72 KB)</span></div>
             <div class="document-link-wrapper"><a href="dokumenty/zwrotnica-katowice/Klauzula_RODO_Zwrotnica_Kato.pdf" target="_blank" aria-label="Klauzula informacyjna RODO - otworzy się w nowej karcie">Klauzula informacyjna RODO</a> <span class="file-info">(PDF: 70 KB)</span></div>
             <div class="document-link-wrapper"><a href="dokumenty/zwrotnica-katowice/Ankieta_badania_specjalnych_potrzeb_Zwrotnica_Kato.pdf" target="_blank" aria-label="Ankieta badania specjalnych potrzeb - otworzy się w nowej karcie">Ankieta badania specjalnych potrzeb</a> <span class="file-info">(PDF: 55 KB)</span></div>
-            
+            <div class="document-link-wrapper"><a href="dokumenty/zwrotnica-katowice/harmonogram_lipiec_2025_zwrotnica.pdf" target="_blank" aria-label="Harmonogram Form Wsparcia Lipiec 2025">Harmonogram Form Wsparcia Lipiec 2025</a> <span class="file-info">(PDF: 217 KB)</span></div>
     </section>
        
         <!-- SEKCJA 4: ZWROTNICA w Rudzie Śląskiej -->
