Fix literówka Liiec -> Lipiec

--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
             <div class="document-link-wrapper"><a href="dokumenty/praktykant/PRAKTYKANT_Deklaracja_uczestnictwa_w_projekcie_(1).pdf" target="_blank" aria-label="PRAKTYKANT Deklaracja uczestnictwa w projekcie - otworzy się w nowej karcie">PRAKTYKANT Deklaracja uczestnictwa w projekcie</a> <span class="file-info">(PDF: 155 KB)</span></div>
             <div class="document-link-wrapper"><a href="dokumenty/praktykant/Zgoda_RODO_Praktykant.pdf" target="_blank" aria-label="Zgoda RODO Praktykant - otworzy się w nowej karcie">Zgoda RODO Praktykant</a> <span class="file-info">(PDF: 237 KB)</span></div>
             <div class="document-link-wrapper"><a href="dokumenty/praktykant/Czerwiec_2025.pdf" target="_blank" aria-label="Czerwiec 2025 - otworzy się w nowej karcie">Czerwiec 2025</a> <span class="file-info">(PDF: 218 KB)</span></div>
-            <div class="document-link-wrapper"><a href="dokumenty/praktykant/harmonogram_lipiec_2025.pdf" target="_blank" aria-label="Czerwiec 2025 - otworzy się w nowej karcie">Liiec 2025</a> <span class="file-info">(PDF: 220 KB)</span></div>
+            <div class="document-link-wrapper"><a href="dokumenty/praktykant/harmonogram_lipiec_2025.pdf" target="_blank" aria-label="Czerwiec 2025 - otworzy się w nowej karcie">Lipiec 2025</a> <span class="file-info">(PDF: 220 KB)</span></div>
         </section>
 
     </main>
