Nowy Modal z instrukcjami
Dodano na końcu `index.html` "accessible-modal"

--- a/index.html
+++ b/index.html
@@ -482,5 +482,15 @@
     </footer>
 
     <script src="js/main.js"></script>
+<div id="accessible-modal" class="modal-overlay" role="dialog" aria-modal="true" aria-labelledby="modal-title" hidden>
+    <div class="modal-content">
+        <div class="modal-header">
+            <h2 id="modal-title" class="modal-title">Instrukcje</h2>
+            <button id="modal-close-btn" class="modal-close-btn" aria-label="Zamknij okno">&times;</button>
+        </div>
+        <div id="modal-body" class="modal-body">
+            </div>
+    </div>
+</div>
 </body>
 </html>
