Dodane info o aktualizacji

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
         <!-- SEKCJA: O projektach -->
         <section id="o-projektach" aria-labelledby="o-projektach-heading">
             <h2 id="o-projektach-heading">O projektach</h2>
+            <p>Aktualizacja 2025.07.18, godz. 19:08</p>
             <p>Śląskie Centrum Profilaktyki i Psychoterapii realizuje projekty skierowane do mieszkańców, pracowników i uczniów miasta Katowice oraz Rudy Śląskiej:</p>
             <ul>
                 <li>"Strefa Transformacji w Katowicach 2.0"</li>
