--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
     <header>
         <div class="container">
             <div class="logos">
-                <img src="media/images/kolory-pion-slaskie-rgb.png" alt="Logo Funduszy Europejskich dla Śląskiego">
-                <img src="media/images/kolory-pion-rzeczpospolita-polska-rgb.png" alt="Logo Rzeczpospolitej Polskiej">
-                <img src="media/images/kolory-pion-unia-europejska-rgb.png" alt="Logo Unii Europejskiej">
-                <img src="media/images/kolory-pion-wojewodztwo-slaskie.png" alt="Herb Województwa Śląskiego">
+                <a href="index.html" aria-label="Strona główna"><img src="media/images/kolory-pion-slaskie-rgb.png" alt="Logo Funduszy Europejskich dla Śląskiego"></a>
+                <a href="index.html" aria-label="Strona główna"><img src="media/images/kolory-pion-rzeczpospolita-polska-rgb.png" alt="Logo Rzeczpospolitej Polskiej"></a>
+                <a href="index.html" aria-label="Strona główna"><img src="media/images/kolory-pion-unia-europejska-rgb.png" alt="Logo Unii Europejskiej"></a>
+                <a href="index.html" aria-label="Strona główna"><img src="media/images/kolory-pion-wojewodztwo-slaskie.png" alt="Herb Województwa Śląskiego"></a>
             </div>
             <div class="centered-logo">
-                <img src="media/images/logo-scpip-1.png" alt="Logo Śląskiego Centrum Profilaktyki i Psychoterapii">
+                <a href="index.html" aria-label="Strona główna Śląskiego Centrum Profilaktyki i Psychoterapii"><img src="media/images/logo-scpip-1.png" alt="Logo Śląskiego Centrum Profilaktyki i Psychoterapii"></a>
             </div>
             <h1>Projekty Śląskiego Centrum Profilaktyki i Psychoterapii</h1>
         </div>
@@ -107,7 +107,6 @@
     </nav>
 
     <main id="main-content" class="container">
-        
         <section id="o-projektach" aria-labelledby="o-projektach-heading">
             <h2 id="o-projektach-heading">O projektach</h2>
             <p>Śląskie Centrum Profilaktyki i Psychoterapii realizuje projekty skierowane do mieszkańców, pracowników i uczniów miasta Katowice oraz Rudy Śląskiej:</p>
@@ -120,7 +119,6 @@
                 <li>"Praktykant - doświadczenie na wagę złota"</li>
             </ul>
         </section>
-
         <section id="strefa-katowice" aria-labelledby="strefa-katowice-heading">
             <h2 id="strefa-katowice-heading">Strefa Transformacji w Katowicach 2.0</h2>
             <p>Śląskie Centrum Profilaktyki i Psychoterapii realizuje projekt skierowany do mieszkańców, pracowników i uczniów miasta Katowice. Oferujemy działania na rzecz rozwoju społeczności lokalnej.</p>
