--- a/pages/deklaracja-dostepnosci.html
+++ b/pages/deklaracja-dostepnosci.html
@@ -80,7 +80,7 @@
     <header>
         <div class="container">
             <div class="centered-logo">
-                <img src="../media/images/logo-scpip-1.png" alt="Logo Śląskiego Centrum Profilaktyki i Psychoterapii">
+                <a href="../index.html" aria-label="Strona główna Śląskiego Centrum Profilaktyki i Psychoterapii"><img src="../media/images/logo-scpip-1.png" alt="Logo Śląskiego Centrum Profilaktyki i Psychoterapii"></a>
             </div>
             <h1>Deklaracja dostępności</h1>
         </div>
